# mcp-stage-server

./: .gitignore  pyproject.toml
data/: rules.json
data/rules_json/: package_collision.json  package_generation.json  plan_generation.json  plan_validation.json  preplan_gate.json
docs/: interactive_protocol.md  mss_session_tools.md  overview.md  stage_tools.md  workflow.md
docs/Changelogs/: 2026-03-01_aliasy_trybow_debug_workout.md  2026-03-01_integracja_blokad_status.md  2026-03-01_mss_packages_stages.md  2026-03-01_naprawa_mss_A-G.md  2026-03-01_workout_status_nawigacja.md  2026-03-01_wykrywanie_projektow_connect_status.md
docs/Documentation/: context_tools.md  eval_tools.md  interactive_protocol.md  mss_session_tools.md  plan_tools.md  usage.md
docs/Information/: mss_session_tools.md  usage.md
docs/Templates/: changelogs_template.md  documentation_template_component.md
mss/: __init__.py
mss/engines/: __init__.py  artifact_flow_gate.py  mss_session_discovery.py  projects_discovery.py  session_actions_policy.py  summary_details_validator.py
mss/guard/: __init__.py  mechanical.py  semantic.py
mss/parsers/: __init__.py  markdown.py
mss/rules/: __init__.py  convert_md_to_json.py  loader.py  schema.py
mss/runner/: __init__.py  (+1 more)
tests/: test_collision.py  test_exec_bundle.py  test_execution_log.py  test_guard.py  test_guard_full.py  test_mss_artifacts.py  test_parser.py  test_rules_convert.py  test_rules_directive_pack.py  test_rules_loader.py  test_session.py  test_state.py  test_summary_details_validator.py  test_tools.py  test_verbose_mode_guards.py
(+18 files in other folders)
