[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-stage-server"
version = "0.1.0"
description = "MCP Stage Server MVP"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0.0"]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["mss*", "mss_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
